@@ -7,10 +7,10 @@
 
 	<title>Blueprint CSS Framework Sample Page</title>
 
-  <!-- Framework CSS -->
+    <!-- Framework CSS -->
 	<link rel="stylesheet" href="../blueprint/compressed/screen.css" type="text/css" media="screen, projection" />
 	<link rel="stylesheet" href="../blueprint/compressed/print.css" type="text/css" media="print" />
-  <!--[if lt IE 7]><link rel="stylesheet" href="../blueprint/lib/ie.css" type="text/css" media="screen, projection"><![endif]-->
+    <!--[if lt IE 7]><link rel="stylesheet" href="../blueprint/lib/ie.css" type="text/css" media="screen, projection"><![endif]-->
 	
 	<!-- Import fancy-type plugin for the sample section. -->
 	<link rel="stylesheet" href="../blueprint/plugins/fancy-type/fancy-type.css" type="text/css" media="screen, projection" />
